# PyQt_Socius

./: .gitignore  MANIFEST.in  dev_config.ini  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.py
designer_files/: content_tab_widget.ui  links_tab_widget.ui  pyqt_sorter_boiler_creator.ui  pyqt_sorter_mainwindow.ui  pyqt_sorter_settings.ui  pyqt_sorter_snippet_add.ui  pyqt_sorter_widget_info_dialog.ui  snippets_tab_widget.ui
pyqtsocius/: Ui_pyqt_sorter_boiler_creator.py  Ui_pyqt_sorter_mainwindow.py  Ui_pyqt_sorter_settings.py  Ui_pyqt_sorter_snippet_add.py  Ui_pyqt_sorter_widget_info_dialog.py  __init__.py  __main__.py  main_window.py  method_sort_helper.py  pyqt_sorter_classes.py  pyqt_sorter_data.py  pyqt_sorter_main.py  pyqt_sorter_misc.py  pyqt_sorter_models.py  pyqt_sorter_ressources.qrc  pyqt_sorter_syntax_highlight.py  pyqt_sorter_utility.py
pyqtsocius/converted_files/: Ui_pyqt_sorter_mainwindow.py
pyqtsocius/init_userdata/: _pack_and_bin_and_py_data.py  bin_data.py  construction_info.py  user_data_setup.py
pyqtsocius/non_ui_elements/: data.py  reading.py
pyqtsocius/ressources/templates/: mainwindow_template.py.jinja
pyqtsocius/ui_elements/: pyqt_sorter_ressources.qrc
pyqtsocius/ui_elements/misc_ui/: system_tray.py  (+2 more)
pyqtsocius/utilities_and_vendored/: exceptions.py  visual_effects.py  widget_insert_items.py
tools/: _project_meta.env  convert_requirements_dev_to_normal.py  create_venv.cmd  profiling_to_graph__main__.cmd  test.txt  ui_conv_targets.json
tools/create_venv_logs/: create_venv.errors
tools/private_quick_scripts/: set_inits.py
(+19 files in other folders)
