[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyqtsocius"
author = "Giddius"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "readme.md"
requires = [
	"appdirs",
	"argcomplete",
	"attrs",
	"checksumdir",
	"click",
	"fuzzysearch",
	"fuzzywuzzy",
	"gidviewmodels",
	"Jinja2",
	"MarkupSafe",
	"marshmallow",
	"numpy",
	"packaging",
	"pipx",
	"pyparsing",
	"pyperclip",
	"PyQt5",
	"PyQt5-sip",
	"pyqtgraph",
	"python-dotenv",
	"python-Levenshtein",
	"pywin32",
	"QScintilla",
	"regex",
	"six",
	"userpath",
	"WMI",
]




[tool.flit.scripts]

